[package]
name = "dioxus-use-websocket"
version = "0.1.0"
authors = ["Rasmus Lövegren <fruitiex@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.1.7" }
wasm-bindgen-futures = "0.4.28"
reqwasm = "0.4.0"
futures = "0.3.8"
serde = { version = "1.0" }
serde_json = "1.0"