[package]
name = "dioxus-websocket-hooks"
version = "0.0.2"
authors = ["Rasmus Lövegren <fruitiex@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/FruitieX/dioxus-websocket-hooks"
description = "Dioxus hooks for websocket connections"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.1.7" }
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
reqwasm = "0.4.0"
futures = "0.3.8"
serde = { version = "1.0" }
serde_json = "1.0"
async-rwlock = "1.3.0"
web-sys = { version = "0.3.44", features = [ 'console' ] }
async-std = "1.10.0"

[dev-dependencies]
dioxus = { version = "0.1.7", features = ["web"] }
fermi = { git = "https://github.com/dioxuslabs/fermi" }
async-rwlock = "1.3.0"